# carbon

./: CMakeLists.txt  README.md  porting_scripts.txt
cursors/: CMakeLists.txt
cursors/Oxygen_Black/: index.theme
cursors/Oxygen_Blue/: index.theme
cursors/Oxygen_Yellow/: index.theme
cursors/src/: CMakeLists.txt  README  make_config.cmake
cursors/src/theme-bluecurve/: index.theme
cursors/src/theme-brown/: index.theme
cursors/src/theme-cherry/: index.theme
cursors/src/theme-chrome/: index.theme
cursors/src/theme-desert/: index.theme
cursors/src/theme-emerald/: index.theme
cursors/src/theme-green/: index.theme
cursors/src/theme-grey/: index.theme
cursors/src/theme-honeycomb/: index.theme
cursors/src/theme-hot_orange/: index.theme
kstyle/: CMakeLists.txt  README  carbon.kcfg  carbon.themerc  carbonaddeventfilter.h  carbonblurhelper.h  carbonframeshadow.cpp  carbonframeshadow.h  carbonmdiwindowshadow.h  carbonmnemonics.cpp  carbonmnemonics.h  carbonpropertynames.h  carbonshadowhelper.cpp  carbonshadowhelper.h  carbonstyle.cpp  carbonstyle.h  carbonstylehelper.cpp  carbonstyleplugin.cpp  carbonstyleplugin.h  oxygen.h  oxygen.json  oxygen.kcfg  oxygenblurhelper.cpp  oxygenmdiwindowshadow.cpp  oxygenpropertynames.cpp  oxygenshadowhelper.cpp  oxygenshadowhelper.h  oxygensplitterproxy.cpp  oxygensplitterproxy.h  oxygenstyleconfigdata.kcfgc  oxygenstylehelper.h  oxygenwindowmanager.cpp  oxygenwindowmanager.h
kstyle/animations/: carbonanimations.cpp  carbonbaseengine.cpp  carbonbusyindicatordata.cpp  carbonbusyindicatorengine.cpp  carbondockseparatordata.h  carbonenabledata.cpp  carbonenabledata.h  carbonheaderviewdata.h  carbonheaderviewengine.cpp  carbonheaderviewengine.h  carbonmdiwindowdata.cpp  carbonmdiwindowdata.h  carbonmdiwindowengine.cpp  carbonmdiwindowengine.h  carbonmenubardata.cpp  carbonmenubardata_imp.h  carbonmenubarengine.h  carbonmenudata.h  carbonprogressbardata.h  carbonprogressbarengine.cpp  carbonprogressbarengine.h  carbonscrollbardata.cpp  carbonscrollbarengine.cpp  carbonscrollbarengine.h  carbonspinboxdata.cpp  carbonspinboxdata.h  carbonspinboxengine.cpp  carbonspinboxengine.h  carbonsplitterengine.h  carbontabbardata.cpp  carbontabbardata.h  carbontabbarengine.h  carbontoolbardata.h  carbontoolbarengine.cpp  carbontoolboxengine.cpp  carbonwidgetstatedata.cpp  carbonwidgetstatedata.h  carbonwidgetstateengine.h  oxygenanimationdata.cpp  oxygenanimationdata.h  (+24 more)
kstyle/config/: CMakeLists.txt  Messages.sh  carbonconfigdialog.h  carbonfollowmouseanimationconfigitem.cpp  carbonstyleconfig.cpp  carbonstyleconfigmodule.cpp  carbonstyleconfigmodule.h  main.cpp  oxygenanimationconfigwidget.cpp  oxygenanimationconfigwidget.h  oxygenconfigdialog.cpp  oxygenfollowmouseanimationconfigitem.h  oxygenstyleconfig.desktop  oxygenstyleconfig.h
kstyle/config/ui/: carbonstyleconfig.ui  oxygenconfigdialog.ui
kstyle/debug/: oxygenwidgetexplorer.cpp  oxygenwidgetexplorer.h
kstyle/demo/: CMakeLists.txt  Messages.sh  carbonbenchmarkwidget.cpp  carbonbenchmarkwidget.h  carbonbuttondemowidget.h  carbondemodialog.cpp  carbondemowidget.cpp  carbonframedemowidget.cpp  carbonframedemowidget.h  carbonlistdemowidget.cpp  carbonlistdemowidget.h  carbonsimulator.cpp  carbonsimulator.h  carbontabdemowidget.cpp  carbontabdemowidget.h  carbontabwidget.h  main.cpp  oxygenbuttondemowidget.cpp  oxygendemodialog.h  oxygendemowidget.h  oxygeninputdemowidget.cpp  oxygeninputdemowidget.h  oxygenmdidemowidget.cpp  oxygenmdidemowidget.h  oxygensliderdemowidget.cpp  oxygensliderdemowidget.h  oxygentabwidget.cpp
kstyle/demo/ui/: carbondemodialog.ui  oxygentabdemowidget.ui
kstyle/transitions/: carbonlabelengine.cpp  carbonlabelengine.h  carbonlineeditdata.cpp  carbonlineeditengine.cpp  carbonlineeditengine.h  carbonstackedwidgetdata.h  carbonstackedwidgetengine.cpp  carbontransitiondata.cpp  oxygencomboboxdata.cpp  oxygencomboboxdata.h  oxygencomboboxengine.cpp  oxygencomboboxengine.h  oxygenlabeldata.cpp  oxygenlabeldata.h  oxygenlineeditdata.h  oxygenstackedwidgetdata.cpp  oxygenstackedwidgetengine.h  oxygentransitiondata.h  oxygentransitions.cpp  oxygentransitions.h  oxygentransitionwidget.cpp  oxygentransitionwidget.h
kwin-decoration/: CMakeLists.txt  Messages.sh  oxygenbutton.cpp  oxygenbutton.h  oxygenclient.cpp  oxygenclient.desktop  oxygenclient.h  oxygenclientgroupitemdata.cpp  oxygenclientgroupitemdata.h  oxygenconfigdata.kcfg  oxygenconfiguration.kcfgc  oxygendecohelper.cpp  oxygendecohelper.h  oxygendecorationdefines.h  oxygenexceptionlist.cpp  oxygenexceptionlist.h  oxygenfactory.cpp  oxygenfactory.h  oxygensizegrip.cpp  oxygensizegrip.h  oxygentitleanimationdata.cpp  oxygentitleanimationdata.h
kwin-decoration/config/: CMakeLists.txt  config.json  oxygenanimationconfigwidget.cpp  oxygenanimationconfigwidget.h  oxygenconfig.cpp  oxygenconfig.h  oxygenconfigwidget.cpp  oxygenconfigwidget.h  oxygendetectwidget.cpp  oxygendetectwidget.h  oxygenexceptiondialog.cpp  oxygenexceptiondialog.h  oxygenexceptionlistwidget.cpp  oxygenexceptionlistwidget.h  oxygenexceptionmodel.cpp  oxygenexceptionmodel.h
kwin-decoration/config/ui/: oxygenconfigurationui.ui  oxygendetectwidget.ui  oxygenexceptiondialog.ui  oxygenexceptionlistwidget.ui
libcarbon/: Messages.sh  carbonactiveshadowconfigdata.kcfg  carbonactiveshadowconfiguration.kcfgc  carbonanimationconfigitem.cpp  carbonanimationconfigitem.h  carbonbaseanimationconfigwidget.h  carbonhelper.h  carboninactiveshadowconfigdata.kcfg  carboninactiveshadowconfiguration.kcfgc  carbonitemmodel.cpp  carbonitemmodel.h  carbonlistmodel.h  carbonshadowcache.h  carbonshadowconfigwidget.cpp  carbontileset.cpp  carbonutil.h  config-libcarbon.h.cmake  libcarbon.h
liboxygen/: CMakeLists.txt  oxygenanimation.cpp  oxygenanimation.h  oxygenbaseanimationconfigwidget.cpp  oxygengenericanimationconfigitem.cpp  oxygengenericanimationconfigitem.h  oxygenhelper.cpp  oxygenshadowcache.cpp  oxygenshadowconfigwidget.h  oxygentileset.h  oxygenutil.cpp
lookandfeel/: Messages.sh  metadata.desktop
lookandfeel/contents/: defaults
(+24 files in other folders)
